--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "",
-  "outputDirectory": ".",
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "api/index.py"
+      "destination": "/api/index.py"
     }
   ]
 }
-
